data/all_generated_tests/raw_wast_tests/if_StackCorruption_1428.wast
;; 9. **Test Name: Differential Branch Resolutions**    - **Description**: Create conditions in `if` blocks that predicate their execution branches with differing stack heights dynamically, focusing on the handling of the stack state between executing branches.      ```wasm      (i32.const 0) (if (result i32) (i32.const 1) (nop) else (i32.const 1) (i32.add) end)      ```    - **Reasoning**: Examines if differing branches handle operable stack differences accurately without causing corruption.

(assert_invalid
  (module
    (func $differential-branch-resolutions (result i32)
      (i32.const 0)
      (if (result i32) (i32.const 1) (nop) else (i32.const 1) (i32.add) end)
    )
  )
  "type mismatch"
)